[gd_scene load_steps=10 format=3 uid="uid://u656in1y4mvu"]

[ext_resource type="Script" path="res://Scenes/UI_Scenes/Scripts/Timer_new.gd" id="1_dpvdl"]
[ext_resource type="Texture2D" uid="uid://cpg80k1507rv" path="res://sprites/TimeBar.png" id="1_flyxk"]
[ext_resource type="Texture2D" uid="uid://cqkqppycqfmdj" path="res://sprites/TimeIndicator.png" id="2_7agcf"]
[ext_resource type="Script" path="res://Scenes/UI_Scenes/Scripts/StartButton.gd" id="3_6dh53"]
[ext_resource type="Texture2D" uid="uid://bw7pr5640layh" path="res://sprites/TimePlaceholder.png" id="3_rfde4"]
[ext_resource type="StyleBox" uid="uid://b2xsuu4wos7fc" path="res://Scenes/UI_Scenes/Resources/button_normal.tres" id="5_6dh3n"]
[ext_resource type="AudioStream" uid="uid://btg5q4fagb7so" path="res://Sounds/Timer/demon_timer_ending_in.mp3" id="6_clblo"]
[ext_resource type="StyleBox" uid="uid://dqjna3bc76sj3" path="res://Scenes/UI_Scenes/Resources/Smudge/smudge_background_default.tres" id="8_4t2o2"]

[sub_resource type="LabelSettings" id="LabelSettings_2vvqo"]

[node name="CountdownTimer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dpvdl")
metadata/_edit_horizontal_guides_ = [48.0, 100.0]
metadata/_edit_vertical_guides_ = [216.0]

[node name="TimeBar" type="Panel" parent="."]
layout_mode = 0
offset_top = 48.0
offset_right = 215.0
offset_bottom = 80.0
theme_override_styles/panel = ExtResource("8_4t2o2")

[node name="NodeTimeIndicator" type="Node2D" parent="."]
position = Vector2(204, 60)

[node name="TimeIndicator" type="Sprite2D" parent="NodeTimeIndicator"]
z_index = 2
position = Vector2(-0.5, 3)
scale = Vector2(0.325, 1)
texture = ExtResource("2_7agcf")

[node name="TimeCurrent" type="RichTextLabel" parent="NodeTimeIndicator"]
offset_left = -12.0
offset_top = -36.0
offset_right = 20.0
offset_bottom = -12.0
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "3:00"
scroll_active = false

[node name="SmudgeTimerHeader" type="Label" parent="."]
layout_mode = 0
offset_right = 112.0
offset_bottom = 23.0
text = "Smudge Timer"
label_settings = SubResource("LabelSettings_2vvqo")

[node name="TimeBarOld" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.431373, 0.431373, 0.431373, 1)
position = Vector2(116, 63)
scale = Vector2(1, 1.28)
texture = ExtResource("1_flyxk")

[node name="BeginPlaceholder" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(203.5, 63)
scale = Vector2(0.325, 1)
texture = ExtResource("3_rfde4")

[node name="DemonPlaceholder" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(139.564, 63)
scale = Vector2(0.325, 1)
texture = ExtResource("3_rfde4")

[node name="StandardPlaceholder" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(107.596, 63)
scale = Vector2(0.325, 1)
texture = ExtResource("3_rfde4")

[node name="SpiritPlaceholder" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(10.5, 63)
scale = Vector2(0.325, 1)
texture = ExtResource("3_rfde4")

[node name="3Min" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 80.0
offset_right = 224.0
offset_bottom = 96.0
theme_override_font_sizes/normal_font_size = 12
text = "Begin"
scroll_active = false

[node name="Demon - 2Min" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 80.0
offset_right = 164.0
offset_bottom = 97.0
theme_override_font_sizes/normal_font_size = 12
text = "Demon"
autowrap_mode = 0

[node name="Spirit - 0Min" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 80.0
offset_right = 32.0
offset_bottom = 97.0
theme_override_font_sizes/normal_font_size = 12
text = "Spirit"
autowrap_mode = 0

[node name="GhostTimerEnded" type="RichTextLabel" parent="."]
z_index = 1
z_as_relative = false
layout_mode = 0
offset_left = 17.0
offset_top = 52.0
offset_right = 192.0
offset_bottom = 76.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 16
scroll_active = false
autowrap_mode = 0

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 104.0
offset_right = 215.0
offset_bottom = 135.0
theme_override_styles/normal = ExtResource("5_6dh3n")
text = "Start Timer"
script = ExtResource("3_6dh53")

[node name="timerCountdown" type="Timer" parent="."]
wait_time = 180.0
one_shot = true

[node name="TimerAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 4)
stream = ExtResource("6_clblo")

[node name="UIAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 4)
volume_db = 4.0

[node name="devTestSound" type="Button" parent="."]
visible = false
layout_mode = 0
offset_top = 568.0
offset_right = 96.0
offset_bottom = 599.0
text = "Test"

[connection signal="pressed" from="StartButton" to="." method="_on_button_pressed"]
[connection signal="timeout" from="timerCountdown" to="." method="_on_timer_countdown_timeout"]
[connection signal="pressed" from="devTestSound" to="." method="_on_dev_test_sound_pressed"]
